cmake_minimum_required(VERSION 3.12)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Mehrfachvererbung Mehrfachvererbung/Rechteck.cpp Mehrfachvererbung/Rechteck.h Mehrfachvererbung/BeschrifteteForm.cpp Mehrfachvererbung/BeschrifteteForm.h Mehrfachvererbung/BeschriftetesRechteck.cpp Mehrfachvererbung/BeschriftetesRechteck.h Mehrfachvererbung/Form.cpp Mehrfachvererbung/Form.h Mehrfachvererbung/Punkt.cpp Mehrfachvererbung/Punkt.h Mehrfachvererbung/main.cpp Mehrfachvererbung/main.h)